--- a/src/main/resources/assets/examplemod/lang/zh_cn.json
+++ b/src/main/resources/assets/examplemod/lang/zh_cn.json
@@ -2,7 +2,6 @@
   "item.examplemod.turret_wand": "毁灭守望者法杖",
   "entity.examplemod.skeleton_turret": "毁灭·守望者",
   "itemGroup.examplemod": "毁灭守望者模组",
-  "item.examplemod.death_record_card": "死亡记录卡",
   "advancement.examplemod.get_wand.title": "终焉·第零号协议",
   "advancement.examplemod.get_wand.desc": "获得毁灭守望者法杖。既然握住了权柄，就让弹雨淹没一切吧。",
   "item.examplemod.teleport_upgrade_module": "传送升级模块",
@@ -11,5 +10,7 @@
   "message.examplemod.module_installed": "§a已为 %s 安装传送模块",
   "message.examplemod.module_already_installed": "§c%s 已安装传送模块，无需重复安装",
   "message.examplemod.teleport_module_missing": "§c未安装传送模块，无法执行传送",
-  "gui.examplemod.range_label": "🏹 有效射程: %s 米"
+  "gui.examplemod.range_label": "🏹 有效射程: %s 米",
+  "item.examplemod.death_record_card": "编号#xxx 铭牌",
+  "item.examplemod.death_record_card.desc": "记录骷髅死亡前完整快照（不含跟随队伍信息）"
 }
