feat(ui): migrate inventory prompts to info bar with skeleton id prefix

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -3,12 +3,21 @@
   "entity.examplemod.skeleton_turret": "Doom Turret",
   "itemGroup.examplemod": "Doom Turret Mod",
   "item.examplemod.teleport_upgrade_module": "Teleport Upgrade Module",
-  "item.examplemod.teleport_upgrade_module.desc": "§7Upgrade module for Doom Turret",
-  "item.examplemod.teleport_upgrade_module.usage": "§eRight-click on Turret to install",
-  "message.examplemod.module_installed": "§aTeleport Module installed on %s",
-  "message.examplemod.module_already_installed": "§cTeleport Module already installed on %s",
-  "message.examplemod.teleport_module_missing": "§cTeleport Module not installed, cannot execute teleport",
-  "gui.examplemod.range_label": "🏹 Effective Range: %s m",
+  "item.examplemod.multi_shot_upgrade_module": "Multi-Shot Module",
+  "item.examplemod.teleport_upgrade_module.desc": "Upgrade module for Doom Turret",
+  "item.examplemod.teleport_upgrade_module.usage": "Right-click on Turret to install",
+  "message.examplemod.module_installed": "Teleport Module installed on %s",
+  "message.examplemod.module_already_installed": "Teleport Module already installed on %s",
+  "message.examplemod.teleport_module_missing": "Teleport Module not installed, cannot execute teleport",
+  "gui.examplemod.range_label": "Effective Range: %s m",
+  "gui.examplemod.body_info": "Body Info",
+  "gui.examplemod.tactical_terminal": "Tactical Terminal",
+  "gui.examplemod.info_bar_title": "Info Bar",
+  "gui.examplemod.skeleton_prompt_prefix": "Skeleton ID: %s ",
+  "gui.examplemod.skeleton_id_unknown": "N/A",
+  "gui.examplemod.display_mode_info_bar": "Info Bar",
+  "gui.examplemod.display_mode_traditional": "Classic",
+  "gui.examplemod.display_mode_tooltip": "Switch prompt display mode (default: info bar)",
   "item.examplemod.death_record_card": "ID Plaque #xxx",
   "item.examplemod.death_record_card.desc": "Stores full pre-death turret snapshot (except squad/follow-group metadata)"
 }
