--- a/src/main/resources/assets/examplemod/lang/zh_cn.json
+++ b/src/main/resources/assets/examplemod/lang/zh_cn.json
@@ -1,16 +1,25 @@
 {
   "item.examplemod.turret_wand": "毁灭守望者法杖",
-  "entity.examplemod.skeleton_turret": "毁灭·守望者",
+  "entity.examplemod.skeleton_turret": "毁灭守望者",
   "itemGroup.examplemod": "毁灭守望者模组",
-  "advancement.examplemod.get_wand.title": "终焉·第零号协议",
-  "advancement.examplemod.get_wand.desc": "获得毁灭守望者法杖。既然握住了权柄，就让弹雨淹没一切吧。",
+  "advancement.examplemod.get_wand.title": "终焉-零号协议",
+  "advancement.examplemod.get_wand.desc": "获得毁灭守望者法杖。",
   "item.examplemod.teleport_upgrade_module": "传送升级模块",
-  "item.examplemod.teleport_upgrade_module.desc": "§7毁灭守望者专用升级模块",
-  "item.examplemod.teleport_upgrade_module.usage": "§e右键点击炮台以安装",
-  "message.examplemod.module_installed": "§a已为 %s 安装传送模块",
-  "message.examplemod.module_already_installed": "§c%s 已安装传送模块，无需重复安装",
-  "message.examplemod.teleport_module_missing": "§c未安装传送模块，无法执行传送",
-  "gui.examplemod.range_label": "🏹 有效射程: %s 米",
-  "item.examplemod.death_record_card": "编号#xxx 铭牌",
-  "item.examplemod.death_record_card.desc": "记录骷髅死亡前完整快照（不含跟随队伍信息）"
+  "item.examplemod.multi_shot_upgrade_module": "多重射击模块",
+  "item.examplemod.teleport_upgrade_module.desc": "毁灭守望者专用升级模块",
+  "item.examplemod.teleport_upgrade_module.usage": "右键炮台安装",
+  "message.examplemod.module_installed": "已为 %s 安装传送模块",
+  "message.examplemod.module_already_installed": "%s 已安装传送模块，无需重复安装",
+  "message.examplemod.teleport_module_missing": "未安装传送模块，无法执行传送",
+  "gui.examplemod.range_label": "有效射程: %s m",
+  "gui.examplemod.body_info": "机体信息",
+  "gui.examplemod.tactical_terminal": "战术终端",
+  "gui.examplemod.info_bar_title": "信息提示栏",
+  "gui.examplemod.skeleton_prompt_prefix": "骷髅编号：%s ",
+  "gui.examplemod.skeleton_id_unknown": "未知",
+  "gui.examplemod.display_mode_info_bar": "信息栏",
+  "gui.examplemod.display_mode_traditional": "传统",
+  "gui.examplemod.display_mode_tooltip": "切换提示显示模式（默认：信息栏）",
+  "item.examplemod.death_record_card": "编号铭牌 #xxx",
+  "item.examplemod.death_record_card.desc": "记录骷髅炮台死亡前快照（不含小队跟随信息）"
 }
