--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -15,6 +15,9 @@
   "message.examplemod.summon_terminal.rename_terminal_invalid": "Rename failed: terminal is not valid",
   "message.examplemod.summon_terminal.rename_target_missing": "Rename failed: target is no longer available",
   "message.examplemod.summon_terminal.rename_sync_failed": "Rename sync failed and was rolled back",
+  "message.examplemod.mobile_terminal.omni_summon_cooldown": "Omni-Summon cooldown: %s seconds remaining",
+  "message.examplemod.mobile_terminal.omni_summon_triggered": "Omni-Summon complete: recalled %s units",
+  "message.examplemod.mobile_terminal.omni_summon_no_units": "Omni-Summon failed: no owned units found",
   "gui.examplemod.range_label": "Effective Range: %s m",
   "gui.examplemod.body_info": "Body Info",
   "gui.examplemod.tactical_terminal": "Tactical Terminal",
@@ -49,6 +52,45 @@
   "item.examplemod.death_record_card.named": "ID Plaque #%s",
   "item.examplemod.death_record_card.desc": "Stores full pre-death turret snapshot (except squad/follow-group metadata)",
   "block.examplemod.summon_terminal": "Summon Terminal",
+  "item.examplemod.necro_terminal": "NecroTerminal",
+  "gui.examplemod.mobile_terminal.title": "Necro Tactical Terminal",
+  "gui.examplemod.mobile_terminal.header": "TACTICAL LINK ONLINE",
+  "gui.examplemod.mobile_terminal.left_title": "Unit Matrix",
+  "gui.examplemod.mobile_terminal.right_title": "Command Console",
+  "gui.examplemod.mobile_terminal.no_selection": "No unit selected",
+  "gui.examplemod.mobile_terminal.target_prefix": "Target: %s",
+  "gui.examplemod.mobile_terminal.stat_line": "Lv.%s  HP %s/%s",
+  "gui.examplemod.mobile_terminal.attack_line": "Attack %s",
+  "gui.examplemod.mobile_terminal.icon_attack": "ATK",
+  "gui.examplemod.mobile_terminal.icon_follow": "FOL",
+  "gui.examplemod.mobile_terminal.icon_guard": "GRD",
+  "gui.examplemod.mobile_terminal.action_follow": "Follow",
+  "gui.examplemod.mobile_terminal.action_guard": "Guard",
+  "gui.examplemod.mobile_terminal.btn_omni": "Omni-Summon",
+  "gui.examplemod.mobile_terminal.btn_defense": "Absolute Defense",
+  "gui.examplemod.mobile_terminal.btn_scavenge": "Team Scavenge",
+  "gui.examplemod.mobile_terminal.btn_purge": "Team Purge",
+  "gui.examplemod.mobile_terminal.btn_recall_all": "Recall All",
+  "gui.examplemod.mobile_terminal.list_line1": "ID:%s | %s | Lv.%s",
+  "gui.examplemod.mobile_terminal.list_line2": "ATK %s | UUID %s",
+  "gui.examplemod.mobile_terminal.metric_role": "Role %s",
+  "gui.examplemod.mobile_terminal.metric_status": "State %s",
+  "gui.examplemod.mobile_terminal.metric_kills": "Kills %s",
+  "gui.examplemod.mobile_terminal.metric_armor": "Armor %s",
+  "gui.examplemod.mobile_terminal.metric_heat": "Heat %s",
+  "gui.examplemod.mobile_terminal.metric_distance": "Distance %s m",
+  "gui.examplemod.mobile_terminal.metric_fire_rate": "Fire %s/s",
+  "gui.examplemod.mobile_terminal.metric_range": "Range %s m",
+  "gui.examplemod.mobile_terminal.metric_tp_module": "Teleport %s",
+  "gui.examplemod.mobile_terminal.metric_tp_cd": "TP CD %s s",
+  "gui.examplemod.mobile_terminal.metric_upgrade": "Upgrade %s%%",
+  "gui.examplemod.mobile_terminal.value_following": "Following",
+  "gui.examplemod.mobile_terminal.value_guard": "Guard",
+  "gui.examplemod.mobile_terminal.value_role_captain": "Captain",
+  "gui.examplemod.mobile_terminal.value_role_squad": "Squad",
+  "gui.examplemod.mobile_terminal.value_role_reserve": "Reserve",
+  "gui.examplemod.mobile_terminal.value_none": "None",
+  "gui.examplemod.mobile_terminal.value_level": "Lv.%s",
   "item.examplemod.player_manual": "Turret Field Manual",
   "tooltip.examplemod.player_manual.open": "Right click to open the manual",
   "tooltip.examplemod.player_manual.version": "Manual Version: v%s",
@@ -178,8 +220,10 @@
   "tooltip.examplemod.teleport_module.separator": "--------------------------",
   "tooltip.examplemod.teleport_module.cooldown": "Cooldown: %s (fastest/MAX)",
   "tooltip.examplemod.teleport_module.stability": "Stability: %s",
-  "tooltip.examplemod.teleport_module.desc": "Provides tactical teleport and cooldown control.",
-  "tooltip.examplemod.teleport_module.quote": "\"Distance is only an illusion.\"",
+  "tooltip.examplemod.teleport_module.fall_reduction": "Abyss-Anchor: Fall damage -%s%%",
+  "tooltip.examplemod.teleport_module.fall_desc": "\"When gravity judges you, the void rewrites the verdict.\"",
+  "tooltip.examplemod.teleport_module.desc": "A forbidden spatial core for tactical displacement and cooldown domination.",
+  "tooltip.examplemod.teleport_module.quote": "\"Distance is only an illusion. Collapse is merely a phase.\"",
   "tooltip.examplemod.death_record.id_plaque": "ID #%s Plaque",
   "tooltip.examplemod.death_record.level_kills": "Tier: %s  Kills: %s",
   "tooltip.examplemod.death_record.use_on_ground": "Right-click ground to summon and restore the recorded turret.",
