--- a/src/main/resources/assets/examplemod/lang/zh_cn.json
+++ b/src/main/resources/assets/examplemod/lang/zh_cn.json
@@ -15,6 +15,9 @@
   "message.examplemod.summon_terminal.rename_terminal_invalid": "重命名失败：终端状态无效",
   "message.examplemod.summon_terminal.rename_target_missing": "重命名失败：目标已失效",
   "message.examplemod.summon_terminal.rename_sync_failed": "重命名同步失败，已回滚",
+  "message.examplemod.mobile_terminal.omni_summon_cooldown": "一键召唤冷却中：剩余 %s 秒",
+  "message.examplemod.mobile_terminal.omni_summon_triggered": "一键召唤已执行：已召回 %s 个单位",
+  "message.examplemod.mobile_terminal.omni_summon_no_units": "一键召唤失败：未找到你的可用单位",
   "gui.examplemod.range_label": "有效射程: %s m",
   "gui.examplemod.body_info": "本体信息",
   "gui.examplemod.tactical_terminal": "战术终端",
@@ -49,6 +52,45 @@
   "item.examplemod.death_record_card.named": "\u6b7b\u4ea1\u94ed\u724c #%s",
   "item.examplemod.death_record_card.desc": "存储死亡前的完整快照（不含队伍/跟随组元数据）",
   "block.examplemod.summon_terminal": "召唤终端",
+  "item.examplemod.necro_terminal": "死灵终端",
+  "gui.examplemod.mobile_terminal.title": "死灵战术终端",
+  "gui.examplemod.mobile_terminal.header": "战术链接已就绪",
+  "gui.examplemod.mobile_terminal.left_title": "已召唤骷髅列表",
+  "gui.examplemod.mobile_terminal.right_title": "状态控制面板",
+  "gui.examplemod.mobile_terminal.no_selection": "未选择目标",
+  "gui.examplemod.mobile_terminal.target_prefix": "目标: %s",
+  "gui.examplemod.mobile_terminal.stat_line": "等级%s 生命 %s/%s",
+  "gui.examplemod.mobile_terminal.attack_line": "攻击力 %s",
+  "gui.examplemod.mobile_terminal.icon_attack": "攻击",
+  "gui.examplemod.mobile_terminal.icon_follow": "跟随",
+  "gui.examplemod.mobile_terminal.icon_guard": "守卫",
+  "gui.examplemod.mobile_terminal.action_follow": "跟随",
+  "gui.examplemod.mobile_terminal.action_guard": "守卫",
+  "gui.examplemod.mobile_terminal.btn_omni": "一键召唤",
+  "gui.examplemod.mobile_terminal.btn_defense": "一键守卫",
+  "gui.examplemod.mobile_terminal.btn_scavenge": "队伍拾荒",
+  "gui.examplemod.mobile_terminal.btn_purge": "队伍清剿",
+  "gui.examplemod.mobile_terminal.btn_recall_all": "全部召回",
+  "gui.examplemod.mobile_terminal.list_line1": "编号:%s | %s | 等级%s",
+  "gui.examplemod.mobile_terminal.list_line2": "攻击 %s | 标识 %s",
+  "gui.examplemod.mobile_terminal.metric_role": "编队 %s",
+  "gui.examplemod.mobile_terminal.metric_status": "状态 %s",
+  "gui.examplemod.mobile_terminal.metric_kills": "击杀 %s",
+  "gui.examplemod.mobile_terminal.metric_armor": "护甲 %s",
+  "gui.examplemod.mobile_terminal.metric_heat": "热度 %s",
+  "gui.examplemod.mobile_terminal.metric_distance": "距离 %s 米",
+  "gui.examplemod.mobile_terminal.metric_fire_rate": "射速 %s/秒",
+  "gui.examplemod.mobile_terminal.metric_range": "射程 %s 米",
+  "gui.examplemod.mobile_terminal.metric_tp_module": "传送模块 %s",
+  "gui.examplemod.mobile_terminal.metric_tp_cd": "传送冷却 %s 秒",
+  "gui.examplemod.mobile_terminal.metric_upgrade": "升级进度 %s%%",
+  "gui.examplemod.mobile_terminal.value_following": "跟随",
+  "gui.examplemod.mobile_terminal.value_guard": "守卫",
+  "gui.examplemod.mobile_terminal.value_role_captain": "队长",
+  "gui.examplemod.mobile_terminal.value_role_squad": "队员",
+  "gui.examplemod.mobile_terminal.value_role_reserve": "预备",
+  "gui.examplemod.mobile_terminal.value_none": "未安装",
+  "gui.examplemod.mobile_terminal.value_level": "等级%s",
   "item.examplemod.player_manual": "作战玩家手册",
   "tooltip.examplemod.player_manual.open": "右键打开手册",
   "tooltip.examplemod.player_manual.version": "手册版本: v%s",
@@ -178,8 +220,10 @@
   "tooltip.examplemod.teleport_module.separator": "--------------------------",
   "tooltip.examplemod.teleport_module.cooldown": "冷却充能: %s（极速/MAX）",
   "tooltip.examplemod.teleport_module.stability": "空间稳定性: %s",
-  "tooltip.examplemod.teleport_module.desc": "提供战术传送与冷却控制功能",
-  "tooltip.examplemod.teleport_module.quote": "“距离只是幻觉。”",
+  "tooltip.examplemod.teleport_module.fall_reduction": "深渊锚定：摔落伤害 -%s%%",
+  "tooltip.examplemod.teleport_module.fall_desc": "“当重力宣判之时，虚空会替你改写判词。”",
+  "tooltip.examplemod.teleport_module.desc": "禁忌级空间核心：支配位移、压缩冷却、扭曲战场法则。",
+  "tooltip.examplemod.teleport_module.quote": "“距离只是幻觉，坠落不过是相位切换。”",
   "tooltip.examplemod.death_record.id_plaque": "编号#%s 铭牌",
   "tooltip.examplemod.death_record.level_kills": "等级: %s  击杀: %s",
   "tooltip.examplemod.death_record.use_on_ground": "右键地面召唤并恢复对应骷髅炮台",
